[package]
name = "stylus-multilevel-inheritance"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloy-primitives = { version = "0.3.1", default-features = false }
alloy-sol-types = { version = "0.3.1", default-features = false }
stylus-sdk = { version = "0.4.3", default-features = false }
stylus-proc = { version = "0.4.3", default-features = false }
mini-alloc = "0.4.2"

[lib]
crate-type = ["lib", "cdylib"]

[profile.release]
codegen-units = 1
strip = true
lto = true
panic = "abort"
opt-level = "s"

[patch.crates-io.stylus-sdk]
git = "https://github.com/qalisander/stylus-sdk-rs"
branch = "toplevelstorage-dependency-injection"

[patch.crates-io.stylus-proc]
git = "https://github.com/qalisander/stylus-sdk-rs"
branch = "toplevelstorage-dependency-injection"
